--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,12 +33,11 @@
     {% include header.html %}
     {% include navigation-sliding.html %}
 
-    {% if page.image.feature %}
-    <div class="page-lead" style="background-image:url({{ site.url }}/images/{{ page.image.feature }})">
+    {% if page.image %}
+    <div class="page-lead" style="background-image:url({{ site.url }}/images/{{ page.image }})">
       <div class="wrap page-lead-content">
-        <h1>Skinny Bones</h1>
-        <h2>Jump start your Jekyll site with something thin and light.</h2>
-        <a href="{{ site.url }}/getting-started/" class="btn-inverse">Start Using Skinny Bones</a> &nbsp; or &nbsp; <a href="https://github.com/mmistakes/jekyll-theme-skinny-bones" class="btn-inverse">View on GitHub</a>
+        <h1>{% page.logo %}</h1>
+        <h2>{% page.description %}</h2>
       </div><!-- /.page-lead-content -->
     </div><!-- /.page-lead -->
     {% endif %}
